Fixes bug in layer box where it became too large and was partially not visible

--- a/src/styles/screen-paint.less
+++ b/src/styles/screen-paint.less
@@ -436,7 +436,6 @@
 
     .layers {
       background: @dark;
-      flex: 1;
       overflow-y: auto;
     }
 
